Bug 1124139 - Don't use mPlaybackStream for CameraPreview. r=jesup

From db346795ad1a0ae33e7496df893288eb1fbf7699 Mon Sep 17 00:00:00 2001
---
 dom/camera/CameraPreviewMediaStream.h |  1 +
 dom/html/HTMLMediaElement.cpp         | 29 +++++++++++++++++------------
 dom/html/HTMLMediaElement.h           |  6 +++++-
 dom/media/MediaStreamGraph.h          |  2 ++
 4 files changed, 25 insertions(+), 13 deletions(-)